# mkdocs-static-i18n

./: .gitignore  404.html  MANIFEST.in  Makefile  README.md  config_update_to_v1.py  index.html  mkdocs.yml  pyproject.toml  requirements-qa.txt  requirements.txt  setup.cfg  setup.py  sitemap.xml  tox.ini
.github/workflows/: ci.yml  deploy-docs.yml  deploy-release.yml  tox.yml
changelog/: index.html
docs/: changelog.md  index.fr.md  index.md  index.zh.md
docs/getting-started/: installation.md  installation.zh.md  philosophy.md  quick-start.md  quick-start.zh.md
docs/overrides/: home.fr.html  home.html  home.zh.html
docs/overrides/partials/: copyright.html
docs/setup/: choosing-the-structure.md  controlling-your-builds.md  index.md  localizing-navigation.md  plugins-compatibility.md  setting-up-languages.md  setting-up-material.md  setting-up-search.md  translating-content.md  upgrading-to-1.md  using-alternates.md  using-i18n-context.md
docs/topic1/: index.en.md  index.fr.md  named_file.en.md  named_file.fr.md
docs/topic2/: README.md  index.en.md  index.md
en/: index.html
en/topic1/: index.html
en/topic1/named_file/: index.html
en/topic2/: index.html
fr/: index.html
fr/changelog/: index.html
fr/getting-started/installation/: index.html
fr/getting-started/philosophy/: index.html
fr/getting-started/quick-start/: index.html
fr/setup/: index.html
fr/setup/choosing-the-structure/: index.html
fr/setup/controlling-your-builds/: index.html
fr/setup/localizing-navigation/: index.html
fr/setup/plugins-compatibility/: index.html
fr/setup/setting-up-languages/: index.html
fr/setup/setting-up-material/: index.html
fr/setup/setting-up-search/: index.html
fr/setup/translating-content/: index.html
fr/setup/upgrading-to-1/: index.html
fr/setup/using-alternates/: index.html
fr/setup/using-i18n-context/: index.html
fr/topic1/: index.html
fr/topic1/named_file/: index.html
fr/topic2/: index.html
getting-started/installation/: index.html
getting-started/philosophy/: index.html
getting-started/quick-start/: index.html
mkdocs_static_i18n/: __init__.py  config.py  folder.py  folder_structure.py  i18n_folders.py  plugin.py  reconfigure.py  struct.py  structure.py  suffix.py  suffix_structure.py  utils.py
mkdocs_static_i18n/custom_i18n_sitemap/: sitemap.xml
search/: search_index.json
setup/: index.html
setup/choosing-the-structure/: index.html
setup/controlling-your-builds/: index.html
setup/localizing-navigation/: index.html
setup/plugins-compatibility/: index.html
setup/setting-up-languages/: index.html
setup/setting-up-material/: index.html
setup/setting-up-search/: index.html
setup/translating-content/: index.html
setup/upgrading-to-1/: index.html
setup/using-alternates/: index.html
setup/using-i18n-context/: index.html
tests/: base.py  conftest.py  hooks.py  hooks_jinja_on_env.py  mkdocs_base.yml  mkdocs_base_rtd.yml  mkdocs_i18n.yml  mkdocs_i18n_default_language_only.yml  mkdocs_i18n_fixed_link.yml  mkdocs_i18n_localizedhomepage.yml  mkdocs_i18n_no_default_language.yml  mkdocs_i18n_rtd.yml  mkdocs_i18n_search.yml  mkdocs_i18n_static_nav.yml  mkdocs_i18n_translated_nav.yml  test_admonitions.py  test_config.py  test_control.py  test_details.py  test_force_default_in_subdirectory.py  test_hooks.py  test_language_selector.py  test_languages_option.py  test_localized_homepage.py  test_navigation.py  test_rtd.py  test_search.py  test_sitemap.py  test_structure.py  test_structure_folder.py  test_structure_suffix.py  test_type.py  test_urls.py
tests/admonitions/: index.fr.md  index.md
tests/details/: index.fr.md  index.md
tests/docs/: test.en.md  test.fr.md
tests/docs_folder_structure/en/topic1/: named_file.md
tests/docs_folder_structure_two_languages/en/topic2/: README.md
tests/docs_folder_structure_two_languages/fr/: index.md
tests/docs_suffix_structure/: index.fr.md
tests/docs_suffix_structure/topic1/: named_file.fr.md
tests/docs_suffix_structure_one_language/french_only/: index.fr.md
tests/docs_suffix_structure_two_languages/topic2/: README.fr.md
tests/lang_per_folder/fr/: index.md
tests/structures/control/en_fr/docs/: index.md
tests/structures/control/en_fr/docs/fr/english_default/: index.md
tests/structures/control/fr_without_default/: mkdocs.yml
tests/theme_overrides/: content.html
theme_overrides/: main.html
theme_overrides/partials/: header.html  i18n_languages.html
topic1/: index.html
topic1/named_file/: index.html
topic2/: index.html
